--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,6 +105,8 @@ header .header-nav nav li+li {
   padding: 20px;
   margin: 50px 0;
   height: auto;
+  width: 25vw;
+  min-width: 350px;
   line-height: 50px;
   background-color: var(--app-header-bg);
   justify-content: space-between;
@@ -113,7 +115,6 @@ header .header-nav nav li+li {
 
 .postArea #post {
   background-color: transparent;
-  width: 550px;
   height: 155px;
   resize: none;
   color: var(--app-text);
@@ -159,7 +160,8 @@ header .header-nav nav li+li {
   min-height: 100px;
   background-color: #f2f3f4;
   color: #000;
-  width: 590px;
+  width: 25vw;
+  min-width: 350px;
   border-radius: 6px;
 }
 
