--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -128,6 +128,7 @@ header .header-nav nav li+li {
   color: var(--app-text);
   cursor: pointer;
   padding: 8px;
+  font-size: 24px;
   transition: 0.33s all ease-in-out;
 }
 
