--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -116,6 +116,9 @@ header .header-nav nav li+li {
 .postArea #post {
   background-color: transparent;
   height: 155px;
+  width: 23vw;
+  min-width: 300px;
+  background-color: orange;
   resize: none;
   color: var(--app-text);
 }
